# mats_apps_euph

./: Makefile  base_data.csv  base_data_v2.csv  base_data_v3.csv  data_benign.csv  diagnosis_p1_std_model.csv  euph_responses_std_model.csv  euph_responses_std_model_v3.csv  euph_responses_think_model.csv  eval_euph_responses_std_model_v3_llama3.1_8B.csv  explicit_response_std_model.csv  main.py  nb_concat_diagnosis_data.ipynb  nb_data.ipynb  nb_diagnosis_part1.ipynb  nb_diagnosis_part2.ipynb  nb_eval_inf_cuda.ipynb  nb_reasoning_inf_cuda.ipynb  nb_standard_inf.ipynb  pyproject.toml
attempt_1_data/: base_data.csv  euph_responses_std_model.csv  euph_responses_std_model_v2.csv  eval_euph_responses_std_model_qwen2.5_1.5B.csv
attempt_2_data/: euph_responses_std_model_v3_long.csv  euph_responses_think_model_v3_long.csv
attempt_3_data/: diagnosis_p1_std_model_full.csv  diagnosis_p1_think_model_full.csv  diagnosis_p2_std_model_full.csv  diagnosis_p2_think_model_full.csv  euph_responses_std_model_v3_full_length.csv  euph_responses_think_model_v3_full_length.csv  eval_euph_responses_std_model_v3_full_llama3.1_8B.csv  eval_euph_responses_think_model_v3_full_llama3.1_8B.csv
attempt_3_data/newest_p2_eval/: diagnosis_p2_std_model_full.csv  diagnosis_p2_think_model_full.csv
mech_interp_part/: harm_probe.csv  topic_probe.csv
